# absent-chroma

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs  rust-toolchain.toml  stats.sh  stats.txt
.cargo/: config.toml
.github/workflows/: release-platforms.yml  release.yaml
assets-etc/wip/: malfoy-wip.kra  malfoy.blend  malfoy.blend1
assets/models/: malfoy.glb
design/: GDD.md  client-design-main.drawio  game-wireframes.drawio  idea- blind n deaf.md  scope-and-tech.md  todo-kem-network.md
design/Interim Report/: gantt-chart.xlsx  report.typ
src/: client_m.rs  server.rs  server_m.rs
src/client/: app.rs  audio.rs  input.rs  mod.rs  network.rs  player.rs  plugins.rs  setup.rs  ui.rs
src/client/controls/: mod.rs
src/client/network/: encryption.rs  login.rs  messages.rs  mod.rs
src/client/ui/: actions.rs  mod.rs
src/client/world/: mod.rs  player.rs  scene.rs
src/common/: encryption.rs  enemies.rs  mod.rs  network.rs  players.rs  user.rs
src/common/network/: mod.rs
src/server/: app.rs  mod.rs  network.rs
src/server/encryption/: mod.rs
src/server/network/: messages.rs  mod.rs
