[package]
name = "absent-chroma"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "client"
path = "src/client_m.rs"

[[bin]]
name = "server"
path = "src/server_m.rs"

[dependencies]
bevy = { version = "0.16.0", features = ["dynamic_linking", "wayland"] }
bevy_renet = { git = "https://github.com/lucaspoffo/renet.git", rev = "d2c5074bc232781889c26acfe68d8622b8ebd88e"}
bincode = { version = "2.0.1" }
fips203 = "0.4.3"
getrandom = "0.3.3"
local-ip-address = "0.6.5"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }


# Enable a small amount of optimization in the dev profile.
[profile.dev]
incremental = true
opt-level = 1
debug = false

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
# lto = "thin"
lto = true
opt-level = 3
# codegen-units = 1
incremental = false
debug = false

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[build-dependencies]
dotenvy = "0.15.7"
