[package]
name = "absent_chroma"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "client"
path = "src/client_m.rs"

[[bin]]
name = "server"
path = "src/server_m.rs"

[dependencies]
audionimbus = "0.8.3"
bevy = { version = "0.17.2", features = ["dynamic_linking"] }
fips203 = "0.4.3"
bevy_renet = { git = "https://github.com/lucaspoffo/renet.git", rev= "ce4e3a09fd061428e146a9d88d1fb29d7d9bc474" }
zeroize = "1.8.2"
local-ip-address = "0.6.5"
rand = "0.9.2"
bincode = "2.0.1"
cryptoxide = "0.5.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
incremental = true
opt-level = 1
debug = false

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
# lto = "thin"
lto = true
opt-level = 3
# codegen-units = 1
incremental = false
debug = false

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[build-dependencies]
dotenvy = "0.15.7"
